--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
   "description": "Cookiebot integration",
   "type": "typo3-cms-extension",
   "license": "GPL-2.0-or-later",
+  "version": "1.0.0",
   "keywords": [
     "typo3",
     "cookiebot",
